# llvm-CI-test

./: .gitignore  CMakeLists.txt  do_tests.sh
.github/scripts/: alive2-swpp-intrinsics.patch  alive2-swpp2024-intrinsics.patch  benchmark_alive2_test.sh  build_alive2.sh  install_ninja.sh  test_benchmark.sh
.github/workflows/: CI.yml
src/lib/: opt.cpp
src/lib/opt/: CMakeLists.txt  test_optimization.cpp  test_optimization.h
temp/.github/workflows/: CI.yml
unit_tests/test_optimization/: input.ll
